# Day-3-Implementing-GPT3-and-Flan-T5

./: .replit  flan.py  pyproject.toml  replit.nix
.tutorial/: 1. Introduction.md  2. Lesson Plan.md  3. What is Flan T5.md  4. Flan-T5 Setup.md  5. Flan-T5 Execute.md  6. What is GPT3.md  7. OpenAI Setup.md  8. GPT3 Execution.md  9. Final Touches.md  video.json
