[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
huggingface-hub = "^0.11.1"
gradio = "^3.15.0"
nltk = "^3.8"
tensorflow = "^2.8.0rc1"
transformers = "^4.25.1"
gTTS = "^2.3.0"
torch = "^1.13.1"
openai = "^0.26.4"
sentence-transformers = "^2.2.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"